# jems

jems-api/: .coverage  .env  .env.example  .gitignore  conftest.py  pyproject.toml  test.md
jems-api/apps/accounting/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
jems-api/apps/ai/: models.py  serializers.py  services.py  urls.py  views.py
jems-api/apps/brokers/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
jems-api/apps/carriers/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
jems-api/apps/dashboard/: services.py  views.py
jems-api/apps/dispatch/: admin.py  exceptions.py  models.py  serializers.py  services.py  urls.py  views.py
jems-api/apps/documents/: admin.py  models.py  serializers.py  urls.py  views.py
jems-api/apps/drivers/: models.py  selectors.py  serializers.py  services.py  urls.py  views.py
jems-api/apps/fleet/: models.py  pdf.py  serializers.py  services.py  urls.py  views.py
jems-api/apps/integrations/: admin.py  models.py  rtl_client.py  serializers.py  services.py  urls.py  views.py
jems-api/apps/loads/: admin.py  apps.py  exceptions.py  models.py  serializers.py  services.py  urls.py  views.py
jems-api/apps/locations/: models.py  serializers.py  services.py  urls.py  views.py
jems-api/apps/reports/: services.py  urls.py  views.py
jems-api/apps/users/: models.py  serializers.py  services.py  urls.py  views.py
jems-api/config/: urls.py  views.py
jems-api/config/settings/: base.py  development.py  production.py
jems-api/scripts/: run_api_checks.sh
(+383 files in other folders)
