[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "celery>=5.6.3",
    "django>=5.2.15",
    "django-environ>=0.14.0",
    "django-extensions>=4.1",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "redis>=8.0.0",
    "anthropic>=0.40.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "coverage>=7.14.3",
    "django-stubs>=6.0.5",
    "factory-boy>=3.3.3",
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-django>=4.12.0",
    "ruff>=0.15.18",
]
